# YTAutomation

./: .dockerignore  .gitignore  ARCHITECTURE.md  DEPLOY_VPS.md  README.md  app.py  docker-compose.yml  main.py  requirements.txt  run_demo.py
ai-log-doctor/: .gitignore  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  docker-compose.yml  pyproject.toml  start.bat
ai-log-doctor/demo/: quick_start.sh  run_demo.py
ai-log-doctor/frontend/: index.html  nginx.conf  package.json
ai-log-doctor/frontend/src/: App.tsx  api.ts  index.css
ai-log-doctor/frontend/src/pages/: Dashboard.tsx  ErrorExplorer.tsx  Login.tsx  Proposals.tsx  Settings.tsx  Validation.tsx
ai-log-doctor/samples/: sample_logs.txt
ai-log-doctor/scripts/: init_db.py
ai-log-doctor/services/api-gateway/: Dockerfile  main.py
ai-log-doctor/services/detector/: Dockerfile  main.py
ai-log-doctor/services/inferer/: Dockerfile  __init__.py  engine.py  main.py
ai-log-doctor/services/shared/: auth.py
ai-log-doctor/services/shared/connectors/: __init__.py  base.py  elastic.py  qradar.py  splunk.py  wazuh.py
ai-log-doctor/services/shared/database/: __init__.py  connection.py  models.py
ai-log-doctor/services/validator/: Dockerfile  __init__.py  main.py
backend/: Dockerfile  ingestion.py  main.py  media.py  models.py  requirements.txt  test_layered_tiff.py  test_output.psd  test_output.tiff  test_psd.py  test_tiff_gen.py  translation.py  trends.py  uploader.py  verify_psd_fix.py  verify_tiff.py  voice.py  worker.py  writer.py
config/: languages.yaml  media.yaml  platforms.yaml  prompts.yaml  (+2 more)
(+22 files in other folders)
